# SFML-GUI

./: Button.cpp  Button.h  CMakeLists.txt  Dialog.cpp  Dialog.h  Logo.cpp  Logo.h  README.md  main.cpp  run.sh
GUI_logic/: CMakeLists.txt
GUI_logic/include/GUI_logic/: Button.h  Dialog.h  Logo.h  setup.h
GUI_logic/src/: Button.cpp  Dialog.cpp  Logo.cpp
